infra/k8s/prod/backend-deploy.yaml
# backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-supervision-backend
  namespace: prod
  labels:
    app: app-supervision-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-supervision-backend
  template:
    metadata:
      labels:
        app: app-supervision-backend
    spec:
      tolerations:
        - key: "node-role.kubernetes.io/master"
          operator: "Exists"
          effect: "NoSchedule"
      nodeSelector:
        node-role.kubernetes.io/master: "true"
      containers:
        - name: backend
          image: angelo321lagomarsino123699/app_supervision:backend-dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5001
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
