infra/k8s/prod/gateway-deploy.yaml
# gateway-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-supervision-gateway
  namespace: prod
  labels:
    app: app-supervision-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-supervision-gateway
  template:
    metadata:
      labels:
        app: app-supervision-gateway
    spec:
      tolerations:
        - key: "node-role.kubernetes.io/master"
          operator: "Exists"
          effect: "NoSchedule"
      nodeSelector:
        node-role.kubernetes.io/master: "true"
      containers:
        - name: gateway
          image: angelo321lagomarsino123699/app_supervision:gateway-dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
