infra/k8s/prod/backend-svc.yaml
# backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: prod
  labels:
    app: app-supervision-backend
spec:
  type: NodePort
  selector:
    app: app-supervision-backend
  ports:
    - port: 5001
      targetPort: 5001
      protocol: TCP
      nodePort: 32001
