infra/k8s/prod/frontend-svc.yaml
# frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: prod
  labels:
    app: app-supervision-frontend
spec:
  type: NodePort
  selector:
    app: app-supervision-frontend
  ports:
    - port: 5002
      targetPort: 5002
      protocol: TCP
      nodePort: 32002
