infra/k8s/prod/gateway-svc.yaml
# gateway-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: prod
  labels:
    app: app-supervision-gateway
spec:
  type: NodePort
  selector:
    app: app-supervision-gateway
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      nodePort: 32000
